<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.uj.yurrili.todoappandroid.AddEditActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_lay_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_title" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_lay_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:hint="@string/hint_description" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_lay_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:hint="@string/hint_url" />
        </android.support.design.widget.TextInputLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_gravity="center_vertical"

            android:columnCount="5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/awesome_font_calendar"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_column="0"
                android:text="@string/fa_calendar" />

            <EditText
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:focusable="false"
                android:layout_marginStart="5dp"
                android:layout_column="1"
                android:textSize="20sp"
                android:inputType="date"
                android:hint="@string/date" />


            <TextView
                android:id="@+id/awesome_font_clock"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:layout_column="2"
                android:layout_marginStart="15dp"
                android:textSize="20sp"
                android:text="@string/fa_clock_o" />

            <EditText
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:focusable="false"
                android:inputType="time"
                android:layout_column="3"
                android:hint="@string/time" />

            <TextView
                android:id="@+id/awesome_font_eraser"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="2dp"
                android:textSize="20sp"
                android:layout_gravity="end|center_vertical"
                android:textColor="@color/colorPrimary"
                android:text="@string/fa_eraser" />

        </GridLayout>



        <Button android:id="@+id/btn_add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
